Fix spacing between sponsors/exhibitors.

--- a/httpdocs/sites/all/themes/custom/scale12x/css/style.css
+++ b/httpdocs/sites/all/themes/custom/scale12x/css/style.css
@@ -8236,6 +8236,7 @@ div.password-suggestions ul {
 .view-sponsors-12x .views-row {
   padding-top: 40px;
   clear: both;
+  margin-bottom: 40px;
 }
 .view-exhibitors .views-row-first,
 .view-sponsors-12x .views-row-first {
