--- a/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
+++ b/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
@@ -39,6 +39,7 @@ body {
   .views-row {
     padding-top: 40px;
     clear: both;
+    margin-bottom: 40px;
   }
   .views-row-first {
     padding-top: 0;
